--- a/来自新世界读后感.md
+++ b/来自新世界读后感.md
@@ -6,6 +6,9 @@
 * 在描写神町的统治方式时很有意思。愧死机制和性爱机制都是对自然界的模仿。淘汰机制一开始怎么看都不合理，后来发现是起于曾有过的事件，是恐慌。
 * 写了愚民政策在统治阶级的重要性。但真的有必要烧毁所有图书馆吗？搞个娱乐圈让大家天天看多好啊。
 
+#### 兔子可以吃了
+这句话在《你一生的故事》里看到。化鼠的处境，像是兔子在这个句子里的两种处境。要么，你被允许活着；要么，你该被杀了。
+
 ### 没弄明白的地方
 * 真理亚和守真是被野狐丸杀死的？
 * 庙会上长得像真理亚的红发姑娘到底是什么？难道和瞬的存在一样，咒力这东西死了也还有？
